--- a/src/components/editor/aq-editor-home-elementmenu.html
+++ b/src/components/editor/aq-editor-home-elementmenu.html
@@ -60,10 +60,10 @@
 
     <div class="layout horizontal">
       
-      <a tabindex="0" role="button" on-tap="goToPreview">
+      <!--a tabindex="0" role="button" on-tap="goToPreview">
         <iron-icon icon="icons:visibility" title="Preview"></iron-icon>
-        <!--span hidden$="[[iconsOnly]]">Analyze</span--> 
-      </a>
+        
+      </a-->
 
       <a tabindex="0" role="button" on-tap="goToAnalyze">
         <iron-icon icon="vaadin-icons:chart" title="Analyze Runs"></iron-icon>
