--- a/src/components/editor/aq-editor-home-strategy-item.html
+++ b/src/components/editor/aq-editor-home-strategy-item.html
@@ -92,6 +92,10 @@
 	        --color: #757575;
 	    }
 
+	    .row:hover {
+	    	background-color: #e1f3f9;--#ced8dc;
+	    }
+
 	    
  
 	</style>
