--- a/src/components/editor/aq-editor-toolbar.html
+++ b/src/components/editor/aq-editor-toolbar.html
@@ -35,8 +35,7 @@
 		  --paper-toolbar-height:40px;
 		  --paper-toolbar-width:100px;
 		  --paper-toolbar-color:teal;
-  		  --paper-toolbar-background:#99d3df;
-
+  		  --paper-toolbar-background: #99ced4;--#e5f1f5;--#99d3df;
 		}
 
 		paper-button {
@@ -160,7 +159,7 @@
 			},
 
 			goBack() {
-				this.fire('back-clicked');
+        		this.fire('backClicked');
 			},
 
 			goToAnalyze() {
