--- a/src/components/community/aq-community-postdetail.html
+++ b/src/components/community/aq-community-postdetail.html
@@ -16,9 +16,9 @@
 
    <style>
     #container {
-      margin-top: 20px;
       width:90%;
-      margin-left: 0 auto;
+      margin: 0 auto;
+      margin-top: 10px;
       color: #333a56;
     }
 
@@ -30,10 +30,9 @@
     paper-icon-button {
       padding-left: 0px;
     }
-
+    
   </style>
 
-  
   <template>
     
       <iron-ajax
@@ -53,7 +52,7 @@
           
           <div class="goBackButton layout horizontal">
             <paper-icon-button noink class="self-center" title="Go Back" icon="icons:arrow-back" on-tap="goBack"></paper-icon-button>
-            <div class="flex"><h3>Back to community</h3></div>
+            <div class="flex"><h4>Back to Community</h4></div>
           </div>
           
           <aq-community-postdetail-header
@@ -68,7 +67,6 @@
             </template>
           </div>
           
-
           <aq-community-postdetail-reply id="replyEditor" threadid={{threadDetails._id}}></aq-community-postdetail-reply>
         </div>
       </template>
