--- a/src/components/editor/aq-editor-home.html
+++ b/src/components/editor/aq-editor-home.html
@@ -93,7 +93,7 @@
 
       #container {
       	margin:0 auto;
-      	margin-top: 10px;
+      	margin-top: 50px;
       	color: #333a56;
       	width: 95%;
 
@@ -102,8 +102,6 @@
       #actions aq-editor-home-elementmenu {
         right: 5%;
       }
-
-}
 
     </style>
 
@@ -433,7 +431,7 @@
         },
 
         onDeleteStrategyResponse(data) {
-        	console.log(data);
+        	//console.log(data);
     	},
 
         	/*for (key in this.checkedItems) {
